文章界面锚点处理

--- a/_posts/2018-08-22-Vue组件间通信.markdown
+++ b/_posts/2018-08-22-Vue组件间通信.markdown
@@ -14,8 +14,10 @@ excerpt_separator: <!--more-->
 
 非父子组件传递数据可以使用```eventBus```或```Vuex```。
 
-在某些情况下使用localStorege、sessionStorage也是不错的选择。
-
+在某些情况下使用**localStorege**、sessionStorage也是不错的选择。
+<p style="margin: 0; padding: 0;">
+<a id="父组件向子组件传递数据" class="anchor"></a>
+</p>
 # 父组件向子组件传递数据
 > Prop 是你可以在组件上注册的一些自定义特性。当一个值传递给一个prop特性的时候，它就变成了那个组件实例的一个属性。
 
@@ -80,7 +82,9 @@ export default {
 </div>
 父组件parent.vue中复用三次child组件，第一个child组件显示默认值，第二个child组件显示"aaa"，第三个child组件显示“哈哈”，点击click之后第三个child组件将显示“parent”
 
-
+<p style="margin: 0; padding: 0;">
+<a id="子组件向父组件传递数据" class="anchor"></a>
+</p>
 # 子组件向父组件传递数据
 
 
@@ -134,11 +138,16 @@ export default {
 </div>
 在父组件中监听子组件中定义的事件就能子组件传递的数据，此时点击“click”将在浏览器开发工具控制台中输出“haha”。
 
-
+<p style="margin: 0; padding: 0;">
+<a id="非父子组件通信" class="anchor"></a>
+</p>
 # 非父子组件通信
 
 非父子组件间通信主要有两种方式，EventBus和Vuex，一般项目简单的情况下推荐使用EventBus，否则使用Vuex。
 
+<p style="margin: 0; padding: 0;">
+<a id="eventbus" class="anchor"></a>
+</p>
 ## eventBus
 
 Vue提供了实例方法$emit和$on，可自定义事件以及监听事件。eventBus即一个Vue实例，各个组件共用这个实例调用$emit和$on方法达到数据传递的目的。
@@ -238,4 +247,7 @@ export default {
 child2组件中也import bus.js并通过它在created钩子中监听msg事件。
 这样当点击child组件的click时，child2能接收到child传递的数据，在浏览器开发工具控制台中输出“a”。
 
+<p style="margin: 0; padding: 0;">
+<a id="vuex" class="anchor"></a>
+</p>
 ## Vuex
